# gtest

gtest/src/: .clang_complete  CMakeLists.txt
gtest/src/test/: CMakeLists.txt  first_test.cc  test_with_fixture.cc
